welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:2: error: '(' expected but identifier found.
def hunt() {if estSurBiscuit(){prendBiscuit()};if (isFacingTrail()) {baisseBrosse();avance();leveBrosse();hunt()}; else {left();hunt()}
               ^SlugHunting:2: error: illegal start of simple expression
def hunt() {if estSurBiscuit(){prendBiscuit()};if (isFacingTrail()) {baisseBrosse();avance();leveBrosse();hunt()}; else {left();hunt()}
                                              ^